Cleanup, added cmake versioning, added getFilenamesindirectory

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,8 +24,26 @@
 cmake_minimum_required(VERSION 3.0)
 
 project(PFE)
+set(VERSION_MAJOR 0)
+set(VERSION_MINOR 1)
+set(VERSION_PATCH 0)
 
 set(USE_PFE_ASSERT true CACHE BOOL "Use PFE defined assert")
+
+# Default to debug for now
+if("${CMAKE_BUILD_TYPE}" STREQUAL "")
+  set(CMAKE_BUILD_TYPE Debug)
+endif()
+
+set(VERSION "v${VERSION_MAJOR}.${VERSION_MINOR}.${VERSION_PATCH}-${CMAKE_BUILD_TYPE}")
+message("Building ${PROJECT_NAME} ${VERSION}")
+if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
+  set(DEBUG_BUILD 1)
+else()
+  set(RELEASE_BUILD 1)
+endif()
+
+configure_file("config.hpp.in" "${CMAKE_SOURCE_DIR}/src/core/config.hpp" @ONLY)
 
 set(SRC_MAIN
     src/main.cpp
@@ -66,20 +84,20 @@ source_group("flow" FILES ${SRC_FLOW})
 
 
 if(UNIX)
-	include(CheckCXXCompilerFlag)
-	check_cxx_compiler_flag("-std=c++1y" COMPILER_SUPPORTS_CXX1Y)
-	check_cxx_compiler_flag("-std=c++14" COMPILER_SUPPORTS_CXX14)
-	check_cxx_compiler_flag("-std=c++11" COMPILER_SUPPORTS_CXX11)
-	check_cxx_compiler_flag("-std=c++0X" COMPILER_SUPPORTS_CXX0X)
-	if(COMPILER_SUPPORTS_CXX1Y)
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
-	elseif(COMPILER_SUPPORTS_CXX14)
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
-	elseif(COMPILER_SUPPORTS_CXX11)
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-	elseif(COMPILER_SUPPORTS_CXX0X)
-		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
-	endif()
+  include(CheckCXXCompilerFlag)
+  check_cxx_compiler_flag("-std=c++1y" COMPILER_SUPPORTS_CXX1Y)
+  check_cxx_compiler_flag("-std=c++14" COMPILER_SUPPORTS_CXX14)
+  check_cxx_compiler_flag("-std=c++11" COMPILER_SUPPORTS_CXX11)
+  check_cxx_compiler_flag("-std=c++0X" COMPILER_SUPPORTS_CXX0X)
+  if(COMPILER_SUPPORTS_CXX1Y)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++1y")
+  elseif(COMPILER_SUPPORTS_CXX14)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
+  elseif(COMPILER_SUPPORTS_CXX11)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+  elseif(COMPILER_SUPPORTS_CXX0X)
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++0x")
+  endif()
 endif()
 
 include_directories(extlibs)
