--- a/.gitignore
+++ b/.gitignore
@@ -385,3 +385,4 @@ __pycache__/
 # should be stored in the .pubxml.user file.
 
 # End of https://www.gitignore.io/api/c++,cmake,xcode,ninja,kdevelop4,visualstudio
+*-swp
