--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -34,7 +34,7 @@ set(TESTS_TESTS
   tests_scope.cpp
   )
 
-include_directories(../extlib)
+include_directories(../extlib SYSTEM)
 include_directories(../src)
 
 add_executable("tests" ${TESTS_INC} ${TESTS_TESTS} ${SRC})
