Added samples, added some unit tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -32,6 +32,7 @@ set(TESTS_TESTS
   tests_json.cpp
   tests_message.cpp
   tests_scope.cpp
+  tests_rule.cpp
   )
 
 include_directories(../extlib SYSTEM)
@@ -40,8 +41,16 @@ include_directories(../src)
 source_group("PFE_Source" FILES ${SRC})
 source_group("Tests" FILES ${TESTS_TESTS})
 
-add_executable("tests" ${TESTS_INC} ${TESTS_TESTS} ${SRC})
+add_executable("tests" ${TESTS_INC} ${TESTS_TESTS}
+  "${CMAKE_SOURCE_DIR}/src/pfe.cpp" 
+  ${SRC}
+)
 
 add_custom_command(TARGET tests POST_BUILD
                     COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/samples $<TARGET_FILE_DIR:tests>/samples
                     )
+                    
+add_custom_command(TARGET tests POST_BUILD
+                    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/tests/rules $<TARGET_FILE_DIR:tests>/rules
+                    )
+
