Strenghtening build with exceptions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ set(SRC_CORE
     ${CMAKE_SOURCE_DIR}/src/core/message_stack.hpp
     ${CMAKE_SOURCE_DIR}/src/core/message_stack.cpp
     ${CMAKE_SOURCE_DIR}/src/core/config.hpp
+    ${CMAKE_SOURCE_DIR}/src/core/constants.hpp
     ${CMAKE_SOURCE_DIR}/src/core/scope_extractor.hpp
     ${CMAKE_SOURCE_DIR}/src/core/cpp_scope_extractor.hpp
     ${CMAKE_SOURCE_DIR}/src/core/cpp_scope_extractor.cpp
