Adding system tests to CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ before_install:
 script:
 - mkdir build
 - cd build
-- cmake ../
+- cmake .. -DRUN_UNIT_TESTS=1 -DRUN_SYSTEM_TESTS=1
 - make
 - cd tests
 - "./tests"
